added hapi js library for web sever and tried rendering simple html pages

--- a/public/cards.html
+++ b/public/cards.html
@@ -2,14 +2,56 @@
 <html>
 <head>
     <title>Cards</title>
-<link rel="stylesheet" type:"text/css" href:"file:///D:/18-12-2021/cards.css">
+<link rel="stylesheet"  href="cards.css">
 </head>
     <body>
         <div class ='main'>
         <!--cards -->
         <div class='cards'>
             <div class='image'>
-                <img src="D:\18-12-2021\coke.jpg">
+                <img src="D:\18-12-2021\vending-machine\public\pepsi.png">
+            </div>
+            <div class='title'>
+                <h1>Title</h1>
+            </div>
+            <div class="des">
+                <p>Title Description</p>
+                <form id='1' method="POSt" action="/item/pepsi">
+                <button >Buy</button>
+                </form>
+            </div>
+        </div>
+        <div class='cards'>
+            <div class='image'>
+                <img src="sprite.jpg">
+            </div>
+            <div class='title'>
+                <h1>Title</h1>
+            </div>
+            <div class="des">
+                <p>Title Description</p>
+                <form id='2' method="POSt" action="/item/sprite">
+                <button>Buy</button>
+                </form>
+            </div>
+        </div>
+        <div class='cards'>
+            <div class='image'>
+                <img src="lays.jpg">
+            </div>
+            <div class='title'>
+                <h1>Title</h1>
+            </div>
+            <div class="des">
+                <p>Title Description</p>
+                <form id='3' method="POSt" action="/lays">
+                <button>Buy</button>
+                </form> 
+            </div>
+        </div>
+        <div class='cards'>
+            <div class='image'>
+                <img src="kurkure.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -21,43 +63,7 @@
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="D:\18-12-2021\coke.jpg">
-            </div>
-            <div class='title'>
-                <h1>Title</h1>
-            </div>
-            <div class="des">
-                <p>Title Description</p>
-                <button>Buy</button>
-            </div>
-        </div>
-        <div class='cards'>
-            <div class='image'>
-                <img src="D:\18-12-2021\coke.jpg">
-            </div>
-            <div class='title'>
-                <h1>Title</h1>
-            </div>
-            <div class="des">
-                <p>Title Description</p>
-                <button>Buy</button>
-            </div>
-        </div>
-        <div class='cards'>
-            <div class='image'>
-                <img src="D:\18-12-2021\coke.jpg">
-            </div>
-            <div class='title'>
-                <h1>Title</h1>
-            </div>
-            <div class="des">
-                <p>Title Description</p>
-                <button>Buy</button>
-            </div>
-        </div>
-        <div class='cards'>
-            <div class='image'>
-                <img src="D:\18-12-2021\coke.jpg">
+                <img src="dairy milk.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
