4 screens added, 1.home screen to enter amount, 2. chose item, 3. confirmation 4. sell product/ refund

--- a/public/cards.html
+++ b/public/cards.html
@@ -9,14 +9,14 @@
         <!--cards -->
         <div class='cards'>
             <div class='image'>
-                <img src="D:\18-12-2021\vending-machine\public\pepsi.png">
+                <img src="pepsi.png">
             </div>
             <div class='title'>
                 <h1>Title</h1>
             </div>
             <div class="des">
                 <p>Title Description</p>
-                <form id='1' method="POSt" action="/item/pepsi">
+                <form id='1' method="POST" action="/item/confirmation/pepsi">
                 <button >Buy</button>
                 </form>
             </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="des">
                 <p>Title Description</p>
-                <form id='2' method="POSt" action="/item/sprite">
+                <form id='2' method="POST" action="/item/confirmation/sprite">
                 <button>Buy</button>
                 </form>
             </div>
@@ -44,7 +44,7 @@
             </div>
             <div class="des">
                 <p>Title Description</p>
-                <form id='3' method="POSt" action="/lays">
+                <form id='3' method="POST" action="/item/confirmation/lays">
                 <button>Buy</button>
                 </form> 
             </div>
@@ -58,19 +58,23 @@
             </div>
             <div class="des">
                 <p>Title Description</p>
+                <form id='4' method="POST" action="/item/confirmation/kurkure">
                 <button>Buy</button>
+                </form> 
             </div>
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="dairy milk.jpg">
+                <img src="dairymilk.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
             </div>
             <div class="des">
                 <p>Title Description</p>
+                <form id='5' method="POST" action="item/confirmation/dairymilk">
                 <button>Buy</button>
+                </form> 
             </div>
         </div>
     </div>
